Closed
Bug 341128
Opened 20 years ago
Closed 19 years ago
MinGW build bustage (gfxPlatform)
Categories
(Firefox Build System :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: bengt.erik.soderstrom, Assigned: cls)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.09 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060609 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060609 Minefield/3.0a1
A couple of days ago everything was fine, but now I get this:
In file included from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/bitset:55,
from ../../../dist/include/thebes/gfxWindowsFonts.h:51,
from ../../../dist/include/thebes/gfxWindowsPlatform.h:42,
from d:/mozilla/mozilla/gfx/thebes/src/gfxPlatform.cpp:41:
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:290:22: macro "min" requires 2 arguments, but only 1 given
In file included from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/bitset:55,
from ../../../dist/include/thebes/gfxWindowsFonts.h:51,
from ../../../dist/include/thebes/gfxWindowsPlatform.h:42,
from d:/mozilla/mozilla/gfx/thebes/src/gfxPlatform.cpp:41:
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:290: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:292: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:292:22: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:292: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:295: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:318:23: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:318: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:320: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:320:23: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:320: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:323: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:371:23: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:371: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:373: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:373:23: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:373: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:376: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:421:30: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:421: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:423: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:423:30: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:423: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:426: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:471:32: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:471: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:473: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:473:32: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:473: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:476: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:521:26: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:521: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:523: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:523:26: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:523: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:526: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:571:24: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:571: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:573: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:573:24: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:573: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:576: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:621:33: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:621: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:623: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:623:33: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:623: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:626: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:671:22: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:671: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:673: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:673:22: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:673: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:676: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:721:31: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:721: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:723: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:723:31: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:723: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:726: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:771:23: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:771: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:773: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:773:23: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:773: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:776: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:821:32: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:821: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:823: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:823:32: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:823: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:826: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:871:28: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:871: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:873: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:873:28: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:873: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:876: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:921:37: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:921: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:923: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:923:37: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:923: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:926: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:971:24: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:971: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:973: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:973:24: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:973: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:976: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1027:25: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1027: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1029: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1029:25: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1029: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1032: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1083:30: macro "min" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1083: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1085: error: expected `;' before "static"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1085:30: macro "max" requires 2 arguments, but only 1 given
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1085: error: expected `;' before "throw"
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/limi
ts:1088: error: expected `;' before "static"
In file included from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/string:48,
from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/bitset:56,
from ../../../dist/include/thebes/gfxWindowsFonts.h:51,
from ../../../dist/include/thebes/gfxWindowsPlatform.h:42,
from d:/mozilla/mozilla/gfx/thebes/src/gfxPlatform.cpp:41:
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/memo
ry: In function `std::pair<_Tp*, ptrdiff_t> std::__get_temporary_buffer(ptrdiff_
t, _Tp*)':
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/memo
ry:77: error: `max' is not a member of `std::numeric_limits<int>'
In file included from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/istream:771,
from d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../
include/c++/3.4.5/bitset:60,
from ../../../dist/include/thebes/gfxWindowsFonts.h:51,
from ../../../dist/include/thebes/gfxWindowsPlatform.h:42,
from d:/mozilla/mozilla/gfx/thebes/src/gfxPlatform.cpp:41:
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc: In member function `std::basic_istream<_CharT, _Traits>& std::basi
c_istream<_CharT, _Traits>::operator>>(short int&)':
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:146: error: `min' is not a member of `std::numeric_limits<short int
>'
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:147: error: `max' is not a member of `std::numeric_limits<short int
>'
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc: In member function `std::basic_istream<_CharT, _Traits>& std::basi
c_istream<_CharT, _Traits>::operator>>(int&)':
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:199: error: `min' is not a member of `std::numeric_limits<int>'
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:200: error: `max' is not a member of `std::numeric_limits<int>'
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc: In member function `std::basic_istream<_CharT, _Traits>& std::basi
c_istream<_CharT, _Traits>::ignore(std::streamsize, typename _Traits::int_type)'
:
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:660: error: `max' is not a member of `std::numeric_limits<int>'
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc: In function `std::basic_istream<_CharT, _Traits>& std::operator>>(
std::basic_istream<_CharT, _Traits>&, _CharT*)':
d:/mozilla/mingw/bin/../lib/gcc/mingw32/3.4.5/../../../../include/c++/3.4.5/bits
/istream.tcc:965: error: `max' is not a member of `std::numeric_limits<int>'
../../../dist/include/thebes/gfxWindowsFonts.h: At global scope:
../../../dist/include/thebes/gfxWindowsFonts.h:216: warning: 'PRUint8 CharRangeB
it(PRUint32)' defined but not used
make[6]: *** [gfxPlatform.o] Error 1
make[6]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/gfx/thebes/
src'
make[5]: *** [libs] Error 2
make[5]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/gfx/thebes'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw/gfx'
make[3]: *** [libs_tier_9] Error 2
make[3]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw'
make[2]: *** [tier_9] Error 2
make[2]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw'
make[1]: *** [alldep] Error 2
make[1]: Leaving directory `/cygdrive/d/mozilla/mozilla/object-mingw'
make: *** [alldep] Error 2
Reproducible: Always
Comment 1•20 years ago
|
||
This started happening for me after Bug# 340590 was checked in. However, I really can't tell if this is a MingW bug or a bug with the checkin. I must have another look when I'm more awake.
Status: UNCONFIRMED → NEW
Ever confirmed: true
The problem is that min & max are being treated as macros in <limits> which is included by <bitset>. If I '#undef min' & '#undef max' before including <bitset> then gfxPlatform.cpp compiles. The min/max macros are defined in windef.h in w32api 3.7.
This patch defines NOMINMAX to avoid having windef.h define those macros. It isn't clear to me exactly who we can expect to include "gfxWindowsFont.h". It might be better to just explicitly undef min & max just in gfxWindowsFont.h.
We also need to fix the link order so that gcc/binutils don't complain.
Flags: review?(pavlov)
Product: Firefox → Core
Version: unspecified → Trunk
Attachment #225224 -
Flags: review?(pavlov)
Updated•20 years ago
|
QA Contact: build.config → build-config
Comment 3•20 years ago
|
||
Just tested the patch with my suite build. Seems to works fine. Now for my Firefox, etc builds.
Thanks cls.
Comment 4•20 years ago
|
||
OK, builds fine with Thunderbird and Firefox along with the already mentioned suite build.
Updated•19 years ago
|
Summary: MinGW build bustage → MinGW build bustage (gfxPlatform)
This one just undefs min/max in the header & fixes the link issue.
Attachment #227095 -
Flags: review?(pavlov)
| Reporter | ||
Comment 6•19 years ago
|
||
(In reply to comment #5)
> Created an attachment (id=227095) [edit]
> v1.1
>
> This one just undefs min/max in the header & fixes the link issue.
>
I tried this patch, and it works fine.
So now we only wait for review and check-in...
Comment 7•19 years ago
|
||
Stuart, could you review the v1.0 or v1.1 patch? Both are only very small, 1kb.
Updated•19 years ago
|
Attachment #225224 -
Attachment is obsolete: true
Attachment #225224 -
Flags: review?(pavlov)
Updated•19 years ago
|
Attachment #227095 -
Flags: review?(pavlov) → review?(vladimir)
Attachment #227095 -
Flags: review?(vladimir) → review+
Comment 8•19 years ago
|
||
Do we need sr for this?
Checking in gfx/thebes/public/gfxWindowsFonts.h;
/cvsroot/mozilla/gfx/thebes/public/gfxWindowsFonts.h,v <-- gfxWindowsFonts.h
new revision: 1.36; previous revision: 1.35
done
Checking in gfx/thebes/src/Makefile.in;
/cvsroot/mozilla/gfx/thebes/src/Makefile.in,v <-- Makefile.in
new revision: 1.34; previous revision: 1.33
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•