Unset the min/max macros set by mingw w32api to avoid bustage when including <bitset>. Link order matters to gcc. Bug #341128 r=vladimir